@@ -1,5 +1,9 @@
 package com.worldpay.converters.populators;
 
+import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URL;
+
 import com.worldpay.config.merchant.ApplePayConfigData;
 import com.worldpay.payment.applepay.ValidateMerchantRequestDTO;
 import com.worldpay.service.WorldpayUrlService;
@@ -8,16 +12,13 @@ import de.hybris.platform.servicelayer.dto.converter.ConversionException;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
-import java.net.MalformedURLException;
-import java.net.URL;
-
 public class ApplePayConfigDataToValidateMerchantRequestDTOPopulator implements Populator<ApplePayConfigData, ValidateMerchantRequestDTO> {
     private static final String WEB = "web";
     private static final Logger LOG = LogManager.getLogger(ApplePayConfigDataToValidateMerchantRequestDTOPopulator.class);
 
-    private final WorldpayUrlService worldpayUrlService;
+    protected final WorldpayUrlService worldpayUrlService;
 
-    public ApplePayConfigDataToValidateMerchantRequestDTOPopulator(WorldpayUrlService worldpayUrlService) {
+    public ApplePayConfigDataToValidateMerchantRequestDTOPopulator(final WorldpayUrlService worldpayUrlService) {
         this.worldpayUrlService = worldpayUrlService;
     }
 
@@ -28,10 +29,11 @@ public class ApplePayConfigDataToValidateMerchantRequestDTOPopulator implements 
         target.setInitiative(WEB);
         final String currentWebSiteURL = worldpayUrlService.getWebsiteUrlForCurrentSite();
         try {
-            final URL url = new URL(currentWebSiteURL);
+            final URL url = URI.create(currentWebSiteURL).toURL();
             target.setInitiativeContext(url.getHost());
-        } catch (MalformedURLException e) {
+        } catch (MalformedURLException | IllegalArgumentException e) {
             LOG.error("Malformed URL {}", currentWebSiteURL, e);
         }
     }
+
 }
